# embd_event_logging

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  LICENSE  readme.md  repo_setup.sh  test_ci.sh
.devcontainer/: Dockerfile  devcontainer.json
.githooks/: clang_cpp.format  commit-msg
.github/: commit-template.txt
.github/workflows/: docker-image.yml
cmake/: auto_version.cmake  event_utility.cmake  user_config.cmake
docs/: CMakeLists.txt  mkdocs.yml
docs/docs/: index.md  quick_start_guide.md  requirement.md
docs/docs/internal/: host_to_device_interface.md  index.md
docs/images/: host_protocol_format.dot  host_protocol_seq_flow.dot
docs/reqs/host/: .doorstop.yml  HOST001.yml  HOST003.yml  HOST004.yml
docs/reqs/module/: MOD001.yml  MOD002.yml  MOD003.yml  MOD004.yml  MOD005.yml  MOD006.yml  MOD007.yml  MOD008.yml  MOD009.yml  MOD010.yml
docs/reqs/usr/: .doorstop.yml  USR001.yml  USR002.yml  USR003.yml
example/: CMakeLists.txt  build_example.sh  example.yml  main.cpp
example/inc/: examplePlatform.hpp
example/src/: examplePlatform.cpp
fuzz/: CMakeLists.txt
include/: config.h.in  config.hpp.in  event.hpp  eventCollector.hpp
include/internal/: eventPacket.hpp
lib/: CMakeLists.txt  eventCollector.cpp  eventPacket.cpp
requirements/: CMakeLists.txt
requirements/reqs/host/: HOST001.yml  HOST002.yml
requirements/reqs/module/: .doorstop.yml  MOD001.yml  MOD003.yml  MOD005.yml  MOD006.yml  MOD007.yml  MOD008.yml  MOD009.yml
requirements/reqs/usr/: USR002.yml
src/: CMakeLists.txt
tests/: CMakeLists.txt  basic.cpp  eventCollectorTest.cpp  main.cpp  packetOp.cpp  packetPool.cpp
tmpl/: Queue.hpp  staticPool.hpp  staticPool.tpp
tools/: event_generate.py
